--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,9 @@
 strong {
   font-weight: 700;
 }
-
+.toggled {
+  font-size: 4rem;
+}
 @media only screen and (max-width: 990px) {
   .section {
     background-image: url(./images/mobile-banner.png);
